--- a/api/package.json
+++ b/api/package.json
@@ -12,7 +12,10 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.18.3",
+    "finnhub": "^1.2.18",
     "mongodb": "^6.4.0",
-    "multer": "^1.4.5-lts.1"
+    "multer": "^1.4.5-lts.1",
+    "node-fetch": "^3.3.2",
+    "superagent": "^8.1.2"
   }
 }
