--- a/my-react-app/package.json
+++ b/my-react-app/package.json
@@ -18,6 +18,7 @@
     "bootstrap": "^5.3.3",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
+    "highcharts": "^11.4.0",
     "highcharts-react-official": "^3.2.1",
     "mongodb": "^6.4.0",
     "multer": "^1.4.5-lts.1",
